# ai_notes

./: .dockerignore  .env.example  .gitignore  docker-compose.yml
.cursor/: _args.b64  _figma_code_only.txt  _figma_execute_args_only.json  _last_mcp_figma_execute.json  _mcp_args.json  args_only_ascii.json  d1.js  d2.js  d2.tpl.js  dark_full_cf.js  dark_theme_code.js  exec_d1_full.json  exec_payload.json  figma_dark_full.js  figma_dark_mini.js  figma_dark_payload.json  figma_mini_payload.json  fp1_dark.js  fp1_escaped_one_line.txt  fp1_tiny.js  fp2_dark.tpl.js  l1_light.js  mcp_call_body.json  mcp_l1_args.json  node_payload.json  oneline_args.txt  oneline_args2.txt  oneline_light1.txt  tmp_figma_args_l2.json
.specify/: feature.json  init-options.json  integration.json
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_notes.py  002_add_note_chunks.py  003_add_agent_tables.py  004_note_chunks_vector_2560.py
backend/src/ai_notes/: __init__.py  __main__.py  config.py  deps.py  logging_config.py  main.py
backend/src/ai_notes/agent/: context.py  graph.py  middleware.py  nodes.py  state.py  tools.py
backend/src/ai_notes/api/: agent.py  health.py  notes.py  search.py
backend/src/ai_notes/cli/: __init__.py  reindex.py
backend/src/ai_notes/domain/: agent.py  errors.py  note.py  search.py
backend/src/ai_notes/infrastructure/db/: models.py  note_repository.py  session.py
backend/src/ai_notes/infrastructure/embeddings/: provider.py
backend/src/ai_notes/infrastructure/llm/: factory.py
backend/src/ai_notes/services/: agent_service.py  chunking_service.py  indexing_service.py  note_service.py  search_service.py
backend/src/ai_notes/util/: text.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_agent.py  test_note_service.py  test_notes.py  test_search.py
backend/tests/unit/: test_agent_nodes.py  test_chunking.py  test_text.py
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+43 files in other folders)
