[project]
name = "ai-notes"
version = "0.1.0"
description = "Personal notes and knowledge base with AI agent (backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pgvector>=0.3.6",
    "beautifulsoup4>=4.12.0",
    "langchain>=1.0,<2",
    "langchain-core>=1.0,<2",
    "langchain-openai>=1.0,<2",
    "langgraph>=1.0,<2",
    "langgraph-checkpoint-postgres>=3.0,<4",
    "psycopg[binary,pool]>=3.2.0",
    "httpx>=0.28.0",
]

[project.scripts]
ai-notes = "ai_notes.main:run"
ai-notes-reindex = "ai_notes.cli.reindex:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.14.0",
    "ruff>=0.8.0",
    "types-beautifulsoup4",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres]>=4.0.0",
    "asgi-lifespan>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_notes"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
[tool.ruff.lint.per-file-ignores]
"src/ai_notes/api/*" = ["B008"]
"**/main.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --import-mode=importlib"

[tool.coverage.run]
source = ["ai_notes"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 50
show_missing = true
